--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -239,366 +240,119 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
-            android:layout_height="120dp">
+            app:cardUseCompatPadding="true"
+            android:layout_height="@dimen/_100sdp">
 
-            <LinearLayout
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/itemImg"
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
+                    android:layout_width="@dimen/_90sdp"
+                    android:layout_height="@dimen/_90sdp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:src="@drawable/item" />
 
-                <LinearLayout
+                <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <TextView
+                        <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/tvItemname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
                             android:text="Large Box"
-                            android:textSize="22sp" />
+                            android:textSize="@dimen/_16sdp" />
 
-                        <TextView
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_alignParentRight="true"
                             android:id="@+id/tvItemprice"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAlignment="textEnd"
-                            android:layout_weight="1"
                             android:text="$720"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/_16sdp" />
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
-                    <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="30dp"
-                        android:layout_weight="1"
+                    <androidx.appcompat.widget.AppCompatRatingBar
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:src="@drawable/stars4" />
 
-                    <TextView
+                    <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
                         android:text="There are many variations." />
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-
                         android:orientation="horizontal">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent">
 
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="wrap_content"
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="@dimen/_24sdp"
+                                android:layout_height="@dimen/_24sdp"
                                 android:layout_margin="2dp"
                                 android:src="@drawable/ic_remove" />
 
-                            <TextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
+                                android:layout_margin="@dimen/_2sdp"
                                 android:text="5"
-                                android:textSize="18sp"
+                                android:fontFamily="@font/lora_regular"
+                                android:textSize="@dimen/_14sdp"
                                 android:textStyle="bold" />
 
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:layout_width="@dimen/_24sdp"
+                                android:layout_height="@dimen/_24sdp"
+                                android:layout_margin="@dimen/_2sdp"
                                 android:src="@drawable/ic_add" />
 
-                        </LinearLayout>
+                        </androidx.appcompat.widget.LinearLayoutCompat>
 
-                        <LinearLayout
-                            android:layout_width="90dp"
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:layout_alignParentRight="true"
+                            android:layout_width="@dimen/_80sdp"
                             android:layout_height="match_parent"
                             android:background="#1CCF25">
 
-                            <TextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/btnAdd"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:text="Add to cart"
                                 android:textAlignment="center"
-                                android:textColor="#FFF"
-                                android:textSize="12sp"
+                                android:fontFamily="@font/lora_regular"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="@dimen/_12sdp"
                                 android:gravity="center"/>
-                        </LinearLayout>
 
-                    </LinearLayout>
+                        </androidx.appcompat.widget.LinearLayoutCompat>
 
-                </LinearLayout>
+                    </RelativeLayout>
 
-            </LinearLayout>
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_margin="10dp"
-            android:layout_height="120dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/itemImg2"
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:src="@drawable/icon" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tvItemname2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:text="Medium Box"
-                            android:textSize="22sp" />
-
-                        <TextView
-                            android:id="@+id/tvItemprice2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="textEnd"
-                            android:layout_weight="1"
-                            android:text="$720"
-                            android:textSize="20sp" />
-
-                    </LinearLayout>
-
-                    <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="30dp"
-                        android:layout_weight="1"
-                        android:layout_marginTop="5dp"
-                        android:src="@drawable/stars4" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="There are many variations." />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
-                                android:src="@drawable/ic_remove" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
-                                android:text="5"
-                                android:textSize="18sp"
-                                android:textStyle="bold" />
-
-
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
-                                android:src="@drawable/ic_add" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="90dp"
-                            android:layout_height="match_parent"
-                            android:background="#1CCF25">
-
-                            <TextView
-                                android:id="@+id/btnAdd2"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="Add to cart"
-                                android:textAlignment="center"
-                                android:textColor="#FFF"
-                                android:textSize="12sp"
-                                android:gravity="center"/>
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_margin="10dp"
-            android:layout_height="120dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/itemImg3"
-                    android:layout_width="120dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:src="@drawable/item" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tvItemname3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:text="Small Box"
-                            android:textSize="22sp" />
-
-                        <TextView
-                            android:id="@+id/tvItemprice3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="textEnd"
-                            android:layout_weight="1"
-                            android:text="$720"
-                            android:textSize="20sp" />
-
-                    </LinearLayout>
-
-                    <ImageView
-                        android:layout_width="70dp"
-                        android:layout_height="30dp"
-                        android:layout_weight="1"
-                        android:layout_marginTop="5dp"
-                        android:src="@drawable/stars4" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="There are many variations." />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
-                                android:src="@drawable/ic_remove" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
-                                android:text="5"
-                                android:textSize="18sp"
-                                android:textStyle="bold" />
-
-
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
-                                android:src="@drawable/ic_add" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="90dp"
-                            android:layout_height="match_parent"
-                            android:background="#1CCF25">
-
-                            <TextView
-                                android:id="@+id/btnAdd3"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="Add to cart"
-                                android:textAlignment="center"
-                                android:textColor="#FFF"
-                                android:textSize="12sp"
-                                android:gravity="center"/>
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.cardview.widget.CardView>
 
